refactor(ArtistaService): reemplazar Stream.collect(Collectors.toList()) por Stream.toList()
Se actualizan los métodos para usar `Stream.toList()` en lugar de `collect(Collectors.toList())`
asegurando que las listas resultantes sean inmutables, mejorando la mantenibilidad y claridad del código.

- `listarArtistasTendencia`
- `convertirADTO` (redes sociales)